# kattis-rs

./: .gitignore  Cargo.toml  README.md
release/: PKGBUILD
src/: checker.rs  compare.rs  fetch.rs  main.rs  submit.rs
src/submit/: mod.rs  viewer.rs
test-assets/: ants.cpp  jewelrybox.py  moneymatters.cpp  princesspeach.py  teque.py  threedprinter.py
