[package]
name = "kattis-rs"
version = "1.2.5"
authors = ["Marcel H Rød <marcelroed@gmail.com>"]
edition = "2021"
homepage = "https://github.com/marcelroed/"
repository = "https://github.com/marcelroed/kattis-rs"
description = "Competitive programming checker for open.kattis.com"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kattis-rs"
path = "src/main.rs"


[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json", "cookies", "multipart"]}
tempfile = "3"
zip = "0"
clap = { version = "3.0.0-rc.7", features = ["suggestions", "color"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
colored = "2"
itertools = "0"
float-cmp = "0"
enum-iterator = "0"
regex = "1"
lazy_static = "1"
dirs = "3"
configparser = "1"
open = "1"
serde_json = "1"
