[package]
name = "kattis-rs"
version = "1.5.2"
authors = ["Marcel H Rød <marcelroed@gmail.com>"]
edition = "2021"
homepage = "https://github.com/marcelroed/"
repository = "https://github.com/marcelroed/kattis-rs"
description = "Competitive programming checker for open.kattis.com"
license = "MIT"
categories = ["utility"]
keywords = ["kattis", "competitive", "programming", "checker", "kattis-rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kattis"
path = "src/main.rs"


[dependencies]
reqwest = {version = "0.11", features = ["blocking", "json", "cookies", "multipart"]}
tempfile = "3"
zip = "0"
clap = { version = "4", features = ["suggestions", "color", "cargo"] }
futures = "0"
tokio = { version = "1", features = ["full"]}
walkdir = "2"
colored = "2"
itertools = "0"
float-cmp = "0"
enum-iterator = "1"
regex = "1"
lazy_static = "1"
dirs = "5"
configparser = "3"
open = "5"
serde_json = "1"
anyhow = "1"
pretty_env_logger = "0"
log = "0"
guard = "0.5"
